Fixed experience card's overflow in mobile

--- a/css/main.css
+++ b/css/main.css
@@ -240,7 +240,7 @@ article{
     background-color: var(--bg-primary-half);
 }
 
-@media (max-width:30em)
+@media (max-width:36em)
 {
     .experience-card .for-desktop{
         display:none;
